--- a/src/app/pages/organization/masters/masters.html
+++ b/src/app/pages/organization/masters/masters.html
@@ -1,4 +1,4 @@
-<div ba-panel ba-panel-class="large-panel mail-panel">
+<div ba-panel ba-panel-class="xmedium-panel mail-panel">
 <div class="row mail-client-container transparent">
   <div class="col-md-12">
     
