--- a/src/app/pages/organization/masters/templates/category/category-add.html
+++ b/src/app/pages/organization/masters/templates/category/category-add.html
@@ -12,8 +12,10 @@
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
-                    <input name="CategoryDesc" ng-model="addCtrl.entity.CategoryDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Description" text-only-with-space>
+                    <!--<input name="CategoryDesc" ng-model="addCtrl.entity.CategoryDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                        placeholder="Enter Description" text-only-with-space>-->
+                    <textarea type="text" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.CategoryDesc"
+                        text-only-with-space/>
                 </div>
             </div>
 
