--- a/src/app/pages/organization/masters/templates/emptype/emptype-add.html
+++ b/src/app/pages/organization/masters/templates/emptype/emptype-add.html
@@ -3,17 +3,19 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Employment Type</label>
-                <div class="col-sm-9">
+                <label for="inputEmail3" class="col-sm-4 control-label">Employment Type</label>
+                <div class="col-sm-8">
                     <input name="EmploymentName" ng-model="addCtrl.entity.EmploymentName" type="text" ng-required="true" class="form-control" id="inputEmail3"
                         placeholder="Enter Employment Type" text-only-with-space>
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
-                <div class="col-sm-9">
-                    <input name="EmploymentDesc" ng-model="addCtrl.entity.EmploymentDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Description" text-only-with-space>
+                <label for="inputEmail3" class="col-sm-4 control-label">Description</label>
+                <div class="col-sm-8">
+                    <!--<input name="EmploymentDesc" ng-model="addCtrl.entity.EmploymentDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                        placeholder="Enter Description" text-only-with-space>-->
+                         <textarea type="text" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.EmploymentDesc"
+                        text-only-with-space/>
                 </div>
             </div>
 
