--- a/src/app/pages/organization/masters/templates/other-qualification/other-qualification-add.html
+++ b/src/app/pages/organization/masters/templates/other-qualification/other-qualification-add.html
@@ -5,20 +5,22 @@
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Qualification</label>
                 <div class="col-sm-9">
-                    <input name="OtherQualificationName" ng-model="addCtrl.entity.OtherQualificationName" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Qualification"
-                         >
+                    <input name="OtherQualificationName" ng-model="addCtrl.entity.OtherQualificationName" type="text" ng-required="true" class="form-control"
+                        id="inputEmail3" placeholder="Enter Qualification">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
-                    <input name="OtherQualificationDesc" ng-model="addCtrl.entity.OtherQualificationDesc" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Description"
-                         >
+                    <!--<input name="OtherQualificationDesc" ng-model="addCtrl.entity.OtherQualificationDesc" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Description"
+                         >-->
+                    <textarea type="text" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.OtherQualificationDesc"
+                        text-only-with-space/>
                 </div>
             </div>
-            
-            
-            
+
+
+
 
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
