--- a/src/app/pages/organization/masters/templates/skill/skill-add.html
+++ b/src/app/pages/organization/masters/templates/skill/skill-add.html
@@ -5,20 +5,22 @@
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Skill Name</label>
                 <div class="col-sm-9">
-                    <input name="SkillName" ng-model="addCtrl.entity.SkillName" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Skill Name"
-                         >
+                    <input name="SkillName" ng-model="addCtrl.entity.SkillName" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                        placeholder="Enter Skill Name">
                 </div>
             </div>
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
-                    <input name="SkillDesc" ng-model="addCtrl.entity.SkillDesc" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Description"
-                         >
+                    <!--<input name="SkillDesc" ng-model="addCtrl.entity.SkillDesc" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Description"
+                         >-->
+                    <textarea type="text" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.SkillDesc"
+                        text-only-with-space/>
                 </div>
             </div>
-            
-            
-            
+
+
+
 
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
