--- a/src/app/pages/organization/masters/templates/titles/titles-add.html
+++ b/src/app/pages/organization/masters/templates/titles/titles-add.html
@@ -12,8 +12,10 @@
             <div class="form-group">
                 <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
-                    <input name="TitleDesc" ng-model="addCtrl.entity.TitleDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
-                        placeholder="Enter Description">
+                    <!--<input name="TitleDesc" ng-model="addCtrl.entity.TitleDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                        placeholder="Enter Description">-->
+                    <textarea type="text" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.TitleDesc"
+                        text-only-with-space/>
                 </div>
             </div>
 
