--- a/src/app/pages/organization/masters/templates/bank-branch/bank-branch-add.html
+++ b/src/app/pages/organization/masters/templates/bank-branch/bank-branch-add.html
@@ -16,18 +16,18 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">Bank Name</label>
+                        <label       class="col-sm-4 control-label">Bank Name</label>
                         <div class="col-sm-8">
-                            <input name="BankName" ng-model="addCtrl.entity.BankName" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                            <input name="BankName" maxlength="50" ng-model="addCtrl.entity.BankName"  type="text" ng-required="true" class="form-control" 
                                 placeholder="Enter Bank Name" text-only-with-space>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">Branch Name</label>
+                        <label        class="col-sm-4 control-label">Branch Name</label>
                         <div class="col-sm-8">
-                            <input name="BranchName" ng-model="addCtrl.entity.BranchName" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                            <input name="BranchName" maxlength="50" ng-model="addCtrl.entity.BranchName" type="text" ng-required="true" class="form-control" 
                                 placeholder="Enter Branch Name" text-only-with-space>
                         </div>
                     </div>
@@ -39,19 +39,19 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">IFSC Code</label>
+                        <label       class="col-sm-4 control-label">IFSC Code</label>
                         <div class="col-sm-8">
-                            <input name="IFSCCode" ng-model="addCtrl.entity.IFSCCode" type="text" placeholder="Enter IFSC Code" class="form-control"
-                                id="inputEmail3">
+                            <input name="IFSCCode" maxlength="15" ng-model="addCtrl.entity.IFSCCode" type="text" placeholder="Enter IFSC Code" class="form-control"
+                                  >
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">Postal Zip Code</label>
+                        <label       class="col-sm-4 control-label">Postal Zip Code</label>
                         <div class="col-sm-8">
-                            <input name="BankPoatalZipCode" ng-model="addCtrl.entity.BankPoatalZipCode" type="text" ng-required="true" class="form-control"
-                                id="inputEmail3" placeholder="Enter Postal Zip Code" numeric-Only>
+                            <input name="BankPoatalZipCode" maxlength="6" ng-model="addCtrl.entity.BankPoatalZipCode" type="text" ng-required="true" class="form-control"
+                                   placeholder="Enter Postal Zip Code" numeric-Only>
                         </div>
                     </div>
                 </div>
@@ -62,10 +62,10 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">Branch Address</label>
+                        <label       class="col-sm-4 control-label">Branch Address</label>
                         <div class="col-sm-8">
-                            <input name="BankBranchAddress" ng-model="addCtrl.entity.BankBranchAddress" type="text" ng-required="true" class="form-control"
-                                id="inputEmail3" placeholder="Enter Branch Name">
+                            <input name="BankBranchAddress" maxlength="100" ng-model="addCtrl.entity.BankBranchAddress" type="text" ng-required="true" class="form-control"
+                                   placeholder="Enter Branch Name">
                         </div>
                     </div>
                 </div>
@@ -144,10 +144,10 @@
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">Contact Person</label>
+                        <label       class="col-sm-4 control-label">Contact Person</label>
                         <div class="col-sm-8">
-                            <input name="BankContactPerson" ng-model="addCtrl.entity.BankContactPerson" type="text" ng-required="true" class="form-control"
-                                id="inputEmail3" placeholder="Enter Contact Person">
+                            <input name="BankContactPerson" maxlength="50" ng-model="addCtrl.entity.BankContactPerson" type="text" ng-required="true" class="form-control"
+                                   placeholder="Enter Contact Person">
                         </div>
                     </div>
                 </div>
@@ -158,18 +158,18 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">Fax Number</label>
+                        <label       class="col-sm-4 control-label">Fax Number</label>
                         <div class="col-sm-8">
-                            <input name="BranchFaxNo" ng-model="addCtrl.entity.BranchFaxNo" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                            <input name="BranchFaxNo" maxlength="20" ng-model="addCtrl.entity.BranchFaxNo" type="text" ng-required="true" class="form-control"   
                                 placeholder="Enter Fax Number" numeric-Only>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">Contact Number</label>
+                        <label       class="col-sm-4 control-label">Contact Number</label>
                         <div class="col-sm-8">
-                            <input name="BankContactNo" ng-model="addCtrl.entity.BankContactNo" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                            <input name="BankContactNo" maxlength="16" ng-model="addCtrl.entity.BankContactNo" type="text" ng-required="true" class="form-control"   
                                 placeholder="Enter Contact Number numeric-Only">
                         </div>
                     </div>
@@ -181,9 +181,9 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="form-group">
-                        <label for="inputEmail3" class="col-sm-4 control-label">Email</label>
+                        <label       class="col-sm-4 control-label">Email</label>
                         <div class="col-sm-8">
-                            <input name="BranchEmail" ng-model="addCtrl.entity.BranchEmail" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                            <input name="BranchEmail" maxlength="100" ng-model="addCtrl.entity.BranchEmail" type="text" ng-required="true" class="form-control"   
                                 placeholder="Enter Email">
                         </div>
                     </div>
@@ -221,7 +221,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-4 col-sm-8">
                     <button ng-disabled="!editForm.$valid" type="submit" class="btn btn-warning">Save</button>
-                    <button type="button" class="btn btn-danger" ng-click="back('organization.master.list')">Cancel</button>
+                    <button type="button" class="btn btn-danger" ng-click="back('organization.masters.list')">Cancel</button>
                 </div>
             </div>
         </form>
