--- a/src/app/pages/organization/masters/templates/category/category-add.html
+++ b/src/app/pages/organization/masters/templates/category/category-add.html
@@ -3,18 +3,18 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Category </label>
+                <label       class="col-sm-3 control-label">Category </label>
                 <div class="col-sm-9">
-                    <input name="CategoryName" ng-model="addCtrl.entity.CategoryName" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                    <input name="CategoryName" maxlength="50" ng-model="addCtrl.entity.CategoryName" type="text" ng-required="true" class="form-control"      
                         placeholder="Enter Category" text-only-with-space>
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
+                <label       class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
-                    <!--<input name="CategoryDesc" ng-model="addCtrl.entity.CategoryDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                    <!--<input name="CategoryDesc" ng-model="addCtrl.entity.CategoryDesc" type="text" ng-required="true" class="form-control"      
                         placeholder="Enter Description" text-only-with-space>-->
-                    <textarea type="text" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.CategoryDesc"
+                    <textarea type="text" maxlength="200" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.CategoryDesc"
                         text-only-with-space/>
                 </div>
             </div>
@@ -23,7 +23,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
                     <button ng-disabled="!editForm.$valid" type="submit" class="btn btn-warning">Save</button>
-                    <button type="button" class="btn btn-danger" ng-click="back('organization.master.list')">Cancel</button>
+                    <button type="button" class="btn btn-danger" ng-click="back('organization.masters.list')">Cancel</button>
                 </div>
             </div>
         </form>
