--- a/src/app/pages/organization/masters/templates/emptype/emptype-add.html
+++ b/src/app/pages/organization/masters/templates/emptype/emptype-add.html
@@ -3,16 +3,16 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">Employment Type</label>
+                <label       class="col-sm-4 control-label">Employment Type</label>
                 <div class="col-sm-8">
-                    <input name="EmploymentName" ng-model="addCtrl.entity.EmploymentName" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                    <input name="EmploymentName" maxlength="50" ng-model="addCtrl.entity.EmploymentName" type="text" ng-required="true" class="form-control"      
                         placeholder="Enter Employment Type" text-only-with-space>
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-4 control-label">Description</label>
+                <label       maxlength="200" class="col-sm-4 control-label">Description</label>
                 <div class="col-sm-8">
-                    <!--<input name="EmploymentDesc" ng-model="addCtrl.entity.EmploymentDesc" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                    <!--<input name="EmploymentDesc" ng-model="addCtrl.entity.EmploymentDesc" type="text" ng-required="true" class="form-control"      
                         placeholder="Enter Description" text-only-with-space>-->
                          <textarea type="text" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.EmploymentDesc"
                         text-only-with-space/>
@@ -23,7 +23,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
                     <button ng-disabled="!editForm.$valid" type="submit" class="btn btn-warning">Save</button>
-                    <button type="button" class="btn btn-danger" ng-click="back('organization.master.list')">Cancel</button>
+                    <button type="button" class="btn btn-danger" ng-click="back('organization.masters.list')">Cancel</button>
                 </div>
             </div>
         </form>
