--- a/src/app/pages/organization/masters/templates/gender/gender-add.html
+++ b/src/app/pages/organization/masters/templates/gender/gender-add.html
@@ -3,9 +3,9 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Gender</label>
+                <label       class="col-sm-3 control-label">Gender</label>
                 <div class="col-sm-9">
-                    <input name="GenderName" ng-model="addCtrl.entity.GenderName" type="text" ng-required="true" class="form-control" id="inputEmail3"
+                    <input name="GenderName" maxlength="50" ng-model="addCtrl.entity.GenderName" type="text" ng-required="true" class="form-control"      
                         placeholder="Enter Gender" text-only-with-space>
                 </div>
             </div>
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
                     <button ng-disabled="!editForm.$valid" type="submit" class="btn btn-warning">Save</button>
-                    <button type="button" class="btn btn-danger" ng-click="back('organization.master.list')">Cancel</button>
+                    <button type="button" class="btn btn-danger" ng-click="back('organization.masters.list')">Cancel</button>
                 </div>
             </div>
         </form>
