--- a/src/app/pages/organization/masters/templates/other-qualification/other-qualification-add.html
+++ b/src/app/pages/organization/masters/templates/other-qualification/other-qualification-add.html
@@ -3,18 +3,18 @@
 
         <form class="form-horizontal" name="editForm" ng-submit="addCtrl.saveForm(editForm)">
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Qualification</label>
+                <label       class="col-sm-3 control-label">Qualification</label>
                 <div class="col-sm-9">
-                    <input name="OtherQualificationName" ng-model="addCtrl.entity.OtherQualificationName" type="text" ng-required="true" class="form-control"
-                        id="inputEmail3" placeholder="Enter Qualification">
+                    <input name="OtherQualificationName" maxlength="50" ng-model="addCtrl.entity.OtherQualificationName" type="text" ng-required="true" class="form-control"
+                              placeholder="Enter Qualification">
                 </div>
             </div>
             <div class="form-group">
-                <label for="inputEmail3" class="col-sm-3 control-label">Description</label>
+                <label       class="col-sm-3 control-label">Description</label>
                 <div class="col-sm-9">
-                    <!--<input name="OtherQualificationDesc" ng-model="addCtrl.entity.OtherQualificationDesc" type="text" ng-required="true" class="form-control" id="inputEmail3" placeholder="Enter Description"
+                    <!--<input name="OtherQualificationDesc" ng-model="addCtrl.entity.OtherQualificationDesc" type="text" ng-required="true" class="form-control"       placeholder="Enter Description"
                          >-->
-                    <textarea type="text" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.OtherQualificationDesc"
+                    <textarea type="text" maxlength="200" class="form-control" placeholder="Enter Description" ng-required="true" ng-model="addCtrl.entity.OtherQualificationDesc"
                         text-only-with-space/>
                 </div>
             </div>
@@ -25,7 +25,7 @@
             <div class="form-group">
                 <div class="col-sm-offset-3 col-sm-9">
                     <button ng-disabled="!editForm.$valid" type="submit" class="btn btn-warning">Save</button>
-                    <button type="button" class="btn btn-danger" ng-click="back('organization.master.list')">Cancel</button>
+                    <button type="button" class="btn btn-danger" ng-click="back('organization.masters.list')">Cancel</button>
                 </div>
             </div>
         </form>
