--- a/src/app/pages/organization/employee/add/employeeAdd.html
+++ b/src/app/pages/organization/employee/add/employeeAdd.html
@@ -29,20 +29,20 @@
   <div class="col-sm-3">
     <div class="form-group">   
       <label for="inputFirstName">First Name*</label>    
-       <input  type="text" class="form-control css-form" name="inputFirstName" maxlength="50"  ng-model="addCtrl.empAdd.EmpFirstName" placeholder="First Name" >  
+       <input text-Only type="text" class="form-control css-form" name="inputFirstName" maxlength="50"  ng-model="addCtrl.empAdd.EmpFirstName" placeholder="First Name" >  
     
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputMiddleName">Middle Name</label>
-      <input type="text" class="form-control" id="inputMiddleName" maxlength="50" ng-model="addCtrl.empAdd.EmpMiddleName" placeholder="Middle Name">
+      <input text-Only type="text" class="form-control" id="inputMiddleName" maxlength="50" ng-model="addCtrl.empAdd.EmpMiddleName" placeholder="Middle Name">
     </div>
   </div>
    <div class="col-sm-4">
     <div class="form-group">
       <label for="inputLastName">Last Name</label>
-      <input type="text" class="form-control" id="inputLastName" maxlength="50" ng-model="addCtrl.empAdd.EmpLastName" placeholder="Last Name">
+      <input text-Only type="text" class="form-control" id="inputLastName" maxlength="50" ng-model="addCtrl.empAdd.EmpLastName" placeholder="Last Name">
     </div>
   </div>
 </div>
