--- a/src/app/pages/organization/employee/templates/personal/personal-view.html
+++ b/src/app/pages/organization/employee/templates/personal/personal-view.html
@@ -1,45 +1,15 @@
-
-    <h3 class="">Personal Detail</h3>
-    <hr>
-   
-    <div class="row">
-      <div class="col-md-12">
-      <div class="form-group row clearfix col-md-6">
-          <label for="inputLastName" class="col-sm-3 control-label">Email</label>
-
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="inputLastName" ng-model="empTabCtrl.empPersonalDetail.PdEmail">
-          </div>
-        </div>
-        <div class="form-group row clearfix col-md-6">
-          <label for="inputFirstName" class="col-lg-3 control-label">Mobile</label>
-
-          <div class="col-lg-9">
-            <input type="text" class="form-control" id="inputFirstName"ng-model="empTabCtrl.empPersonalDetail.PdMobileNo">
-          </div>
-        </div>
-     </div>
-      <div class="col-md-12">             
-        <div class="form-group row clearfix col-md-6">
-          <label for="inputFirstName" class="col-lg-3 control-label">Gender</label>
-
-          <div class="col-lg-9">
-             <select id="empGender_{{$index}}"
-                      name="empGender_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdGenderId"
-                      class="form-control"
-                      ng-options="gender.value as gender.name for gender in empTabCtrl.gender"
-                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
-                      data-placeholder="Select Nav Menu"
-                      ng-required="true">
-               </select>
-          </div>
-        </div>
-         <div class="form-group row clearfix col-md-6">
-          <label for="inputLastName" class="col-sm-3 control-label">MaritalStatus</label>
-
-          <div class="col-sm-9">
-             <select id="empMaritalStatus_{{$index}}"
+ <h3 class="">Personal Detail</h3> <hr>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputDOB">Date Of Birth*</label>       
+            <input type="text" class="form-control" id="inputDOB" ng-model="empTabCtrl.empPersonalDetail.PdDateOfBirth">        
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputDesignation">Marital Status*</label>
+      <select id="empMaritalStatus_{{$index}}"
                       name="empMaritalStatus_{{$index}}"
                       ng-model="empTabCtrl.empPersonalDetail.PdMaritalId"
                       class="form-control"
@@ -48,16 +18,88 @@
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
                </select>
-          </div>
-        </div>
-      </div>
-       <div class="col-md-12">     
-       
-          <div class="form-group row clearfix col-md-6">
-          <label for="inputLastName" class="col-sm-3 control-label">Nationality</label>
-
-          <div class="col-sm-9">
-             <select id="empNationality_{{$index}}"
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputEmployeeType">Gender*</label>
+           <select id="empGender_{{$index}}"
+                      name="empGender_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdGenderId"
+                      class="form-control"
+                      ng-options="gender.value as gender.name for gender in empTabCtrl.gender"
+                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                      data-placeholder="Select Nav Menu"
+                      ng-required="true">
+               </select>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputMobile">Mobile*</label>       
+             <input type="text" class="form-control" id="inputMobile" ng-model="empTabCtrl.empPersonalDetail.PdEmail">       
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputEmail">Email*</label>
+       <input type="text" class="form-control" id="inputEmail" ng-model="empTabCtrl.empPersonalDetail.PdEmail">
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputAnniversaryDate">Anniversary Date*</label>
+           <input type="text" class="form-control" id="inputAnniversaryDate" ng-model="empTabCtrl.empPersonalDetail.PdAnniversaryDate"> 
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputFacebook">Facebook</label>       
+             <input type="text" class="form-control" id="inputFacebook" ng-model="empTabCtrl.empPersonalDetail.PdFacebook">       
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputTwitter">Twitter</label>
+       <input type="text" class="form-control" id="inputTwitter" ng-model="empTabCtrl.empPersonalDetail.PdTwitter">
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputAnniversaryDate">Linked In</label>
+           <input type="text" class="form-control" id="inputAnniversaryDate" ng-model="empTabCtrl.empPersonalDetail.PdLinkedIn"> 
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputFacebook">Adhaar</label>       
+             <input type="text" class="form-control" id="inputFacebook" ng-model="empTabCtrl.empPersonalDetail.PdAdhaar">       
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputTwitter">Pan</label>
+       <input type="text" class="form-control" id="inputTwitter" ng-model="empTabCtrl.empPersonalDetail.PdPan">
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputOtherNo">Other No.</label>
+           <input type="text" class="form-control" id="inputOtherNo" ng-model="empTabCtrl.empPersonalDetail.PdOtherNo"> 
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputFacebook">Nationality*</label>       
+           <select id="empNationality_{{$index}}"
                       name="empNationality_{{$index}}"
                       ng-model="empTabCtrl.empPersonalDetail.PdNationalityId"
                       class="form-control"
@@ -65,36 +107,175 @@
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
                       ng-required="true">
+               </select>       
+    </div>
+  </div>
+  </div>
+ <h3 class="">Emergency Number</h3> <hr>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputEmgName">Name</label>       
+             <input type="text" class="form-control" id="inputEmgName" ng-model="empTabCtrl.empPersonalDetail.PdEmgName">       
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputEmgMobile">Mobile</label>
+       <input type="text" class="form-control" id="inputEmgMobile" ng-model="empTabCtrl.empPersonalDetail.PdEmgMobile">
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputEmgAddress">Address</label>
+           <input type="text" class="form-control" id="inputEmgAddress" ng-model="empTabCtrl.empPersonalDetail.PdEmgAddress"> 
+    </div>
+  </div>
+</div>
+
+<h3 class="">Current Address</h3> <hr>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputLine1">Line1</label>       
+             <input type="text" class="form-control" id="inputLine1" ng-model="empTabCtrl.empPersonalDetail.PdLine1">       
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputLine2">Line2</label>
+       <input type="text" class="form-control" id="inputLine2" ng-model="empTabCtrl.empPersonalDetail.PdLine2">
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputEmgAddress">Country</label>
+         <select id="empCmpCountry_{{$index}}"
+                      name="empCmpCountry_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdCountry"
+                      class="form-control"
+                      ng-options="Country.value as Country.name for Country in empTabCtrl.Country"
+                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                      data-placeholder="Select Nav Menu"
+                      ng-required="true">
                </select>
-          </div>
-        </div>
-          <div class="form-group row clearfix col-md-6">
-          <label for="inputLastName" class="col-sm-3 control-label">DateOfBirth</label>
-
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="inputLastName" ng-model="empTabCtrl.empPersonalDetail.PdDateOfBirth">
-          </div>
-        </div>
-      </div>
-        <div class="col-md-12">
-      
-          <div class="form-group row clearfix col-md-6">
-          <label for="inputLastName" class="col-sm-3 control-label">NickName</label>
-
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="inputLastName" ng-model="empTabCtrl.empPersonalDetail.PdNickName">
-          </div>
-        </div>
-         <div class="form-group row clearfix col-md-6">
-          <label for="inputLastName" class="col-sm-3 control-label">EmpCode</label>
-
-          <div class="col-sm-9">
-            <input type="text" class="form-control" id="inputLastName" ng-model="empTabCtrl.empPersonalDetail.PdOtherID">
-          </div>
-        </div>
-      </div>
-       
-     
-    <button type="button" class="btn btn-primary btn-with-icon save-profile">
-      <i class="ion-android-checkmark-circle"></i>Update Profile
-    </button>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="empCmpState_{{$index}}">State</label>       
+         <select id="empCmpState_{{$index}}"
+                      name="empCmpState_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdState"
+                      class="form-control"
+                      ng-options="State.value as State.name for State in empTabCtrl.State"
+                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                      data-placeholder="Select Nav Menu"
+                      ng-required="true">
+               </select>      
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="empCmpCity_{{$index}}">City</label>
+      <select id="empCmpCity_{{$index}}"
+                      name="empCmpCity_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdCity"
+                      class="form-control"
+                      ng-options="City.value as City.name for City in empTabCtrl.City"
+                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                      data-placeholder="Select Nav Menu"
+                      ng-required="true">
+               </select>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputZip">Zip</label>
+       <input type="text" class="form-control" id="inputZip" ng-model="empTabCtrl.empPersonalDetail.PdZip">
+         
+    </div>
+  </div>
+</div>
+<div class="row"> 
+ <div class="col-sm-5">
+      <div class="checkbox">
+      <label class="custom-checkbox">      
+      <input type="checkbox" ng-model="empTabCtrl.empJobDetail.PdPermanent" >   
+      <span>Permanent Address Same as Current Address</span>
+    </label>
+   </div>
+  </div> 
+  </div> 
+<h3 class="">Permanent Address</h3> <hr>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputLine1">Line1</label>       
+             <input type="text" class="form-control" id="inputLine1" ng-model="empTabCtrl.empPersonalDetail.PdLine1">       
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputLine2">Line2</label>
+       <input type="text" class="form-control" id="inputLine2" ng-model="empTabCtrl.empPersonalDetail.PdLine2">
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputEmgAddress">Country</label>
+         <select id="empCmpCountry_{{$index}}"
+                      name="empCmpCountry_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdCountry"
+                      class="form-control"
+                      ng-options="Country.value as Country.name for Country in empTabCtrl.Country"
+                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                      data-placeholder="Select Nav Menu"
+                      ng-required="true">
+               </select>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="empCmpState_{{$index}}">State</label>       
+         <select id="empCmpState_{{$index}}"
+                      name="empCmpState_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdState"
+                      class="form-control"
+                      ng-options="State.value as State.name for State in empTabCtrl.State"
+                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                      data-placeholder="Select Nav Menu"
+                      ng-required="true">
+               </select>      
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="empCmpCity_{{$index}}">City</label>
+      <select id="empCmpCity_{{$index}}"
+                      name="empCmpCity_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdCity"
+                      class="form-control"
+                      ng-options="City.value as City.name for City in empTabCtrl.City"
+                      ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
+                      data-placeholder="Select Nav Menu"
+                      ng-required="true">
+               </select>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    <div class="form-group">
+      <label for="inputZip">Zip</label>
+       <input type="text" class="form-control" id="inputZip" ng-model="empTabCtrl.empPersonalDetail.PdZip">
+         
+    </div>
+  </div>
+</div>
+   <div class="text-center">
+<button type="button" class="btn btn-primary" ng-click="empTabCtrl.updateForm()">Update</button>
+<button type="button"  class="btn btn-primary">Cancel</button>
+</div>
