--- a/src/app/pages/organization/empupload/empupload.html
+++ b/src/app/pages/organization/empupload/empupload.html
@@ -215,6 +215,10 @@
                     <button type="button" ng-click="tabCtrl.nextDataUpload()" class="btn btn-info">
                        {{(tabCtrl.migrate.step3)?"Import":"Next"}}
                     </button>
+                    <button type="button" ng-click="tabCtrl.importDataUpload()" class="btn btn-info">
+                       {{(tabCtrl.migrate.step3)?"Import":"Next"}}
+                    </button>
+                    
 
                 </div>
             </div>
