--- a/src/app/pages/organization/employee/edit/employeeEdit.html
+++ b/src/app/pages/organization/employee/edit/employeeEdit.html
@@ -17,7 +17,11 @@
             <img ng-src="{{ editCtrl.picture }}">
           </div>
           <div class="col-md-6">
-            Title:- <label ng-bind="editCtrl.empBasicDetail.TitleName"></label><br> Name:- <label ng-bind="editCtrl.empBasicDetail.EmpName"></label><br>            EmpCode:- <label ng-bind="editCtrl.empBasicDetail.EmpCode"></label><br> Department:- <label ng-bind="editCtrl.empBasicDetail.DeptName"></label><br>            Designation:- <label ng-bind="editCtrl.empBasicDetail.DesgName"></label>
+            Title:- <label ng-bind="editCtrl.empBasicDetail.TitleName"></label><br>
+            Name:- <label ng-bind="editCtrl.empBasicDetail.EmpName"></label><br>        
+            EmpCode:- <label ng-bind="editCtrl.empBasicDetail.EmpCode"></label><br> 
+            Department:- <label ng-bind="editCtrl.empBasicDetail.DeptName"></label><br>            
+            Designation:- <label ng-bind="editCtrl.empBasicDetail.DesgName"></label>
           </div>
         </div>
 
