--- a/src/app/pages/organization/employee/templates/personal/personal-view.html
+++ b/src/app/pages/organization/employee/templates/personal/personal-view.html
@@ -1,5 +1,8 @@
  <h3 class="">Personal Detail</h3> <hr>
-<div class="row">
+<div ba-panel ba-panel-class="horizontal-tabs tabs-panel">
+    <uib-tabset active="$tabSetStatus.activeTab">
+        <uib-tab heading="Personal">
+          <div class="row">
   <div class="col-sm-4">
     <div class="form-group">
       <label for="inputDOB">Date Of Birth*</label>       
@@ -132,8 +135,13 @@
     </div>
   </div>
 </div>
-
-<h3 class="">Current Address</h3> <hr>
+           <div class="text-center">
+<button type="button" class="btn btn-primary" ng-click="empTabCtrl.updateForm()">Update</button>
+<button type="button"  class="btn btn-primary">Cancel</button>
+</div>
+        </uib-tab>
+        <uib-tab heading="Address">
+           <h3 class="">Current Address</h3> <hr>
 <div class="row">
   <div class="col-sm-4">
     <div class="form-group">
@@ -210,25 +218,26 @@
   </div> 
   </div> 
 <h3 class="">Permanent Address</h3> <hr>
-<div class="row">
+<div ng-if="!empTabCtrl.empJobDetail.PdPermanent">
+<div  class="row">
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="inputLine1">Line1</label>       
-             <input type="text" class="form-control" id="inputLine1" ng-model="empTabCtrl.empPersonalDetail.PdLine1">       
+      <label for="inputPerLine1">Line1</label>       
+             <input type="text" class="form-control" id="inputPerLine1" ng-model="empTabCtrl.empPersonalDetail.PdPerLine1">       
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="inputLine2">Line2</label>
-       <input type="text" class="form-control" id="inputLine2" ng-model="empTabCtrl.empPersonalDetail.PdLine2">
+      <label for="inputPerLine2">Line2</label>
+       <input type="text" class="form-control" id="inputPerLine2" ng-model="empTabCtrl.empPersonalDetail.PdPerLine2">
     </div>
   </div>
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="inputEmgAddress">Country</label>
-         <select id="empCmpCountry_{{$index}}"
-                      name="empCmpCountry_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdCountry"
+      <label for="inputPerCountry">Country</label>
+         <select id="inputPerCountry_{{$index}}"
+                      name="inputPerCountry_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdPerCountry"
                       class="form-control"
                       ng-options="Country.value as Country.name for Country in empTabCtrl.Country"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
@@ -241,10 +250,10 @@
 <div class="row">
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="empCmpState_{{$index}}">State</label>       
+      <label for="empPerState_{{$index}}">State</label>       
          <select id="empCmpState_{{$index}}"
-                      name="empCmpState_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdState"
+                      name="empPerState_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdPerState"
                       class="form-control"
                       ng-options="State.value as State.name for State in empTabCtrl.State"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
@@ -255,10 +264,10 @@
   </div>
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="empCmpCity_{{$index}}">City</label>
-      <select id="empCmpCity_{{$index}}"
-                      name="empCmpCity_{{$index}}"
-                      ng-model="empTabCtrl.empPersonalDetail.PdCity"
+      <label for="empPerCity_{{$index}}">City</label>
+      <select id="empPerCity_{{$index}}"
+                      name="empPerCity_{{$index}}"
+                      ng-model="empTabCtrl.empPersonalDetail.PdPerCity"
                       class="form-control"
                       ng-options="City.value as City.name for City in empTabCtrl.City"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
@@ -269,13 +278,125 @@
   </div>
   <div class="col-sm-4">
     <div class="form-group">
-      <label for="inputZip">Zip</label>
-       <input type="text" class="form-control" id="inputZip" ng-model="empTabCtrl.empPersonalDetail.PdZip">
+      <label for="inputPerZip">Zip</label>
+       <input type="text" class="form-control" id="inputPerZip" ng-model="empTabCtrl.empPersonalDetail.PdPerZip">
          
     </div>
   </div>
 </div>
-   <div class="text-center">
+</div>
+ <div class="text-center">
 <button type="button" class="btn btn-primary" ng-click="empTabCtrl.updateForm()">Update</button>
 <button type="button"  class="btn btn-primary">Cancel</button>
 </div>
+        </uib-tab>
+        
+  <uib-tab heading="Family">
+
+    <div class="col-md-12">
+    
+        <div class="mail-messages-control side-message-navigation-item">
+    <div class="toggle-navigation-container">
+      <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
+    </div>
+      <div class="row">
+      <div class="col-md-6"><span class="bold-text">{{$scope.page.pageinfo.title}}</span><br/>
+      <span ng-show="(rows.length!==undefined)" class="font-bold">Total {{rows.length}} Record(s) found</span>
+      </div>
+      <div class="col-md-6 text-right">
+        <button type="button" class="btn  btn-icon refresh-button" ng-click="$scope.refreshData()"><i class="ion-refresh"></i>Refresh</button>
+        <button type="button" class="btn  btn-icon refresh-button" data-toggle="modal"  ng-click="open('app/pages/organization/employee/templates/personal/addfamily-modal.html', 'md')">     
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>
+        <button type="button" class="btn  btn-icon refresh-button">
+          <i class="fa fa-filter" aria-hidden="true"></i></button>
+        <select ng-show="($scope.page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="$scope.selectedUcvItem" ng-options="opt.name for opt in $scope.page.pageinfo.ucvlist"
+          ng-change="$scope.ucvOnChange($scope.selectedUcvItem)">
+                    </select>
+    
+      </div>
+    </div>
+            <style>
+                .djTable {
+                    width: 100%;
+                }
+                
+                .djTable td,
+                th {
+                    overflow: hidden;
+                }
+                
+                .djTable td:first,
+                th:first {
+                    width: 30px;
+                }
+                
+                .djTable td:last-child,
+                th:last-child {
+                    width: 30px;
+                }
+            </style>
+    
+            <table class="table table-bordered table-hover table-condensed djTable" st-table="displayedCollection" st-safe-src="rows"
+                st-pagination-scroll>
+                <thead>
+                    <tr class="sortable">
+                        <th class="col-md-1" ng-show="gridObject.enableSrNo" st-sort="$index">Sno</th>
+                        <th class="col-md-5" ng-repeat="col in gridObject.columns" st-sort="{{col.name}}">{{col.text}}</th>
+                        <th class="col-md-1">Actions</th>
+                    </tr>
+                    <tr ng-show="gridObject.enableFilter">
+                        <th ng-show="gridObject.enableSrNo"></th>
+                        <th ng-show="gridObject.enableTitleFilter"><input st-search="{{searchName}}" placeholder="Search" class="input-sm form-control search-input"
+                                type="search" /></th>
+                        <th ng-show="gridObject.enableGlobalFilter && (gridObject.enableTitleFilter && gridObject.columns.length!=1)" colspan="{{gridObject.columns.length-1}}">
+                            <input st-search="" placeholder="Global Search" class="input-sm form-control search-input" type="search" /></th>
+                    </tr>
+                </thead>
+                <tbody ng-show="displayedCollection.length>0">
+                    <tr ng-repeat="row in displayedCollection">
+                        <td cursor="pointer" ui-sref="organization.empedit({action:'view',empId:row.EmpId})" ng-show="gridObject.enableSrNo">
+                            {{$index+1}}
+                        </td>
+                        <td cursor="pointer" ui-sref="organization.empedit({action:'view',empId:row.EmpId})" ng-repeat="col in gridObject.columns">{{row[col.name]}}</td>
+                        <td ng-show="gridObject.enableAction">
+                            <a ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId)">
+                                <i class="fa fa-pencil-square-o"></i></a>
+                        </td>
+                    </tr>
+                </tbody>
+                <tbody ng-show="displayedCollection.length<=0&&isLoaded">
+                    <tr>
+                        <td colspan="6">No {{$scope.page.pageinfo.title}} found</td>
+                    </tr>
+                </tbody>
+                <tbody ng-show="isLoading">
+                    <tr>
+                        <td colspan="6">Loading {{$scope.page.pageinfo.title}} Please wait..<i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i></td>
+                    </tr>
+                </tbody>
+                <tfoot ng-show="gridObject.enablePagination">
+                    <tr>
+                        <td colspan="6" class="text-center">
+                            <div st-pagination="" st-items-by-page="gridObject.paginationLength" st-displayed-pages="5"></div>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+
+       
+    </div>
+    </div>
+
+
+
+
+         </uib-tab>
+          <uib-tab heading="Nominee">
+          
+         </uib-tab>
+          <uib-tab heading="Identity">
+          
+         </uib-tab>
+    </uib-tabset>
+</div>
+  
