--- a/src/app/pages/organization/employee/templates/personal/addFamily-modal.html
+++ b/src/app/pages/organization/employee/templates/personal/addFamily-modal.html
@@ -43,7 +43,7 @@
       <div class="checkbox">
       <label class="custom-checkbox">      
       <input type="checkbox" ng-model="family.FdDependents" >   
-      <span>Department</span>
+      <span>Dependent</span>
     </label>
    </div>
     </div>
