--- a/src/app/pages/organization/employee/templates/personal/personal-view.html
+++ b/src/app/pages/organization/employee/templates/personal/personal-view.html
@@ -305,7 +305,7 @@
       </div>
       <div class="col-md-6 text-right">
         <button type="button" class="btn  btn-icon refresh-button" ng-click="$scope.refreshData()"><i class="ion-refresh"></i>Refresh</button>
-        <button type="button" class="btn  btn-icon refresh-button" data-toggle="modal"  ng-click="open('app/pages/organization/employee/templates/personal/addfamily-modal.html', 'md')">     
+        <button type="button" class="btn  btn-icon refresh-button" data-toggle="modal"  ng-click="addFamily('app/pages/organization/employee/templates/personal/addfamily-modal.html', 'md')">     
           <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>
         <button type="button" class="btn  btn-icon refresh-button">
           <i class="fa fa-filter" aria-hidden="true"></i></button>
@@ -354,12 +354,12 @@
                 </thead>
                 <tbody ng-show="displayedCollection.length>0">
                     <tr ng-repeat="row in displayedCollection">
-                        <td cursor="pointer" ui-sref="organization.empedit({action:'view',empId:row.EmpId})" ng-show="gridObject.enableSrNo">
+                        <td cursor="pointer" ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'view')" ng-show="gridObject.enableSrNo">
                             {{$index+1}}
                         </td>
-                        <td cursor="pointer" ui-sref="organization.empedit({action:'view',empId:row.EmpId})" ng-repeat="col in gridObject.columns">{{row[col.name]}}</td>
+                        <td cursor="pointer" ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'view')" ng-repeat="col in gridObject.columns">{{row[col.name]}}</td>
                         <td ng-show="gridObject.enableAction">
-                            <a ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId)">
+                            <a ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'edit')">
                                 <i class="fa fa-pencil-square-o"></i></a>
                         </td>
                     </tr>
@@ -392,10 +392,198 @@
 
          </uib-tab>
           <uib-tab heading="Nominee">
-          
+          <div class="col-md-12">
+    
+        <div class="mail-messages-control side-message-navigation-item">
+    <div class="toggle-navigation-container">
+      <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
+    </div>
+      <div class="row">
+      <div class="col-md-6"><span class="bold-text">{{$scope.page.pageinfo.title}}</span><br/>
+      <span ng-show="(rows.length!==undefined)" class="font-bold">Total {{rows.length}} Record(s) found</span>
+      </div>
+      <div class="col-md-6 text-right">
+        <button type="button" class="btn  btn-icon refresh-button" ng-click="$scope.refreshData()"><i class="ion-refresh"></i>Refresh</button>
+        <button type="button" class="btn  btn-icon refresh-button" data-toggle="modal"  ng-click="addFamily('app/pages/organization/employee/templates/personal/addfamily-modal.html', 'md')">     
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>
+        <button type="button" class="btn  btn-icon refresh-button">
+          <i class="fa fa-filter" aria-hidden="true"></i></button>
+        <select ng-show="($scope.page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="$scope.selectedUcvItem" ng-options="opt.name for opt in $scope.page.pageinfo.ucvlist"
+          ng-change="$scope.ucvOnChange($scope.selectedUcvItem)">
+                    </select>
+    
+      </div>
+    </div>
+            <style>
+                .djTable {
+                    width: 100%;
+                }
+                
+                .djTable td,
+                th {
+                    overflow: hidden;
+                }
+                
+                .djTable td:first,
+                th:first {
+                    width: 30px;
+                }
+                
+                .djTable td:last-child,
+                th:last-child {
+                    width: 30px;
+                }
+            </style>
+    
+            <table class="table table-bordered table-hover table-condensed djTable" st-table="displayedCollection" st-safe-src="rows"
+                st-pagination-scroll>
+                <thead>
+                    <tr class="sortable">
+                        <th class="col-md-1" ng-show="gridObject.enableSrNo" st-sort="$index">Sno</th>
+                        <th class="col-md-5" ng-repeat="col in gridObject.columns" st-sort="{{col.name}}">{{col.text}}</th>
+                        <th class="col-md-1">Actions</th>
+                    </tr>
+                    <tr ng-show="gridObject.enableFilter">
+                        <th ng-show="gridObject.enableSrNo"></th>
+                        <th ng-show="gridObject.enableTitleFilter"><input st-search="{{searchName}}" placeholder="Search" class="input-sm form-control search-input"
+                                type="search" /></th>
+                        <th ng-show="gridObject.enableGlobalFilter && (gridObject.enableTitleFilter && gridObject.columns.length!=1)" colspan="{{gridObject.columns.length-1}}">
+                            <input st-search="" placeholder="Global Search" class="input-sm form-control search-input" type="search" /></th>
+                    </tr>
+                </thead>
+                <tbody ng-show="displayedCollection.length>0">
+                    <tr ng-repeat="row in displayedCollection">
+                        <td cursor="pointer" ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'view')" ng-show="gridObject.enableSrNo">
+                            {{$index+1}}
+                        </td>
+                        <td cursor="pointer" ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'view')" ng-repeat="col in gridObject.columns">{{row[col.name]}}</td>
+                        <td ng-show="gridObject.enableAction">
+                            <a ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'edit')">
+                                <i class="fa fa-pencil-square-o"></i></a>
+                        </td>
+                    </tr>
+                </tbody>
+                <tbody ng-show="displayedCollection.length<=0&&isLoaded">
+                    <tr>
+                        <td colspan="6">No {{$scope.page.pageinfo.title}} found</td>
+                    </tr>
+                </tbody>
+                <tbody ng-show="isLoading">
+                    <tr>
+                        <td colspan="6">Loading {{$scope.page.pageinfo.title}} Please wait..<i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i></td>
+                    </tr>
+                </tbody>
+                <tfoot ng-show="gridObject.enablePagination">
+                    <tr>
+                        <td colspan="6" class="text-center">
+                            <div st-pagination="" st-items-by-page="gridObject.paginationLength" st-displayed-pages="5"></div>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+
+       
+    </div>
+    </div>
+
+
          </uib-tab>
           <uib-tab heading="Identity">
-          
+          <div class="col-md-12">
+    
+        <div class="mail-messages-control side-message-navigation-item">
+    <div class="toggle-navigation-container">
+      <a href class="collapse-navigation-link ion-navicon" ng-click="tabCtrl.navigationCollapsed=!tabCtrl.navigationCollapsed"></a>
+    </div>
+      <div class="row">
+      <div class="col-md-6"><span class="bold-text">{{$scope.page.pageinfo.title}}</span><br/>
+      <span ng-show="(rows.length!==undefined)" class="font-bold">Total {{rows.length}} Record(s) found</span>
+      </div>
+      <div class="col-md-6 text-right">
+        <button type="button" class="btn  btn-icon refresh-button" ng-click="$scope.refreshData()"><i class="ion-refresh"></i>Refresh</button>
+        <button type="button" class="btn  btn-icon refresh-button" data-toggle="modal"  ng-click="addFamily('app/pages/organization/employee/templates/personal/addfamily-modal.html', 'md')">     
+          <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>
+        <button type="button" class="btn  btn-icon refresh-button">
+          <i class="fa fa-filter" aria-hidden="true"></i></button>
+        <select ng-show="($scope.page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="$scope.selectedUcvItem" ng-options="opt.name for opt in $scope.page.pageinfo.ucvlist"
+          ng-change="$scope.ucvOnChange($scope.selectedUcvItem)">
+                    </select>
+    
+      </div>
+    </div>
+            <style>
+                .djTable {
+                    width: 100%;
+                }
+                
+                .djTable td,
+                th {
+                    overflow: hidden;
+                }
+                
+                .djTable td:first,
+                th:first {
+                    width: 30px;
+                }
+                
+                .djTable td:last-child,
+                th:last-child {
+                    width: 30px;
+                }
+            </style>
+    
+            <table class="table table-bordered table-hover table-condensed djTable" st-table="displayedCollection" st-safe-src="rows"
+                st-pagination-scroll>
+                <thead>
+                    <tr class="sortable">
+                        <th class="col-md-1" ng-show="gridObject.enableSrNo" st-sort="$index">Sno</th>
+                        <th class="col-md-5" ng-repeat="col in gridObject.columns" st-sort="{{col.name}}">{{col.text}}</th>
+                        <th class="col-md-1">Actions</th>
+                    </tr>
+                    <tr ng-show="gridObject.enableFilter">
+                        <th ng-show="gridObject.enableSrNo"></th>
+                        <th ng-show="gridObject.enableTitleFilter"><input st-search="{{searchName}}" placeholder="Search" class="input-sm form-control search-input"
+                                type="search" /></th>
+                        <th ng-show="gridObject.enableGlobalFilter && (gridObject.enableTitleFilter && gridObject.columns.length!=1)" colspan="{{gridObject.columns.length-1}}">
+                            <input st-search="" placeholder="Global Search" class="input-sm form-control search-input" type="search" /></th>
+                    </tr>
+                </thead>
+                <tbody ng-show="displayedCollection.length>0">
+                    <tr ng-repeat="row in displayedCollection">
+                        <td cursor="pointer" ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'view')" ng-show="gridObject.enableSrNo">
+                            {{$index+1}}
+                        </td>
+                        <td cursor="pointer" ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'view')" ng-repeat="col in gridObject.columns">{{row[col.name]}}</td>
+                        <td ng-show="gridObject.enableAction">
+                            <a ng-click="editFamily('app/pages/organization/employee/templates/personal/editFamily-modal.html', 'md',row.FdId,'edit')">
+                                <i class="fa fa-pencil-square-o"></i></a>
+                        </td>
+                    </tr>
+                </tbody>
+                <tbody ng-show="displayedCollection.length<=0&&isLoaded">
+                    <tr>
+                        <td colspan="6">No {{$scope.page.pageinfo.title}} found</td>
+                    </tr>
+                </tbody>
+                <tbody ng-show="isLoading">
+                    <tr>
+                        <td colspan="6">Loading {{$scope.page.pageinfo.title}} Please wait..<i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i></td>
+                    </tr>
+                </tbody>
+                <tfoot ng-show="gridObject.enablePagination">
+                    <tr>
+                        <td colspan="6" class="text-center">
+                            <div st-pagination="" st-items-by-page="gridObject.paginationLength" st-displayed-pages="5"></div>
+                        </td>
+                    </tr>
+                </tfoot>
+            </table>
+
+       
+    </div>
+    </div>
+
+
          </uib-tab>
     </uib-tabset>
 </div>
