--- a/src/app/pages/organization/employee/templates/personal/editFamily-modal.html
+++ b/src/app/pages/organization/employee/templates/personal/editFamily-modal.html
@@ -1,4 +1,5 @@
-<div ng-controller="addEmployeeFamilyDetails">
+<!--ng-controller="addEmployeeFamilyDetails"-->
+<div >
 <div class="modal-content">
   <div class="modal-header">
     <button type="button" class="close" ng-click="$dismiss()" aria-label="Close">
@@ -12,7 +13,7 @@
   <div class="col-sm-6">
     <div class="form-group">
       <label for="inputDepartment">Name*</label>
-        <input type="text" class="form-control" ng-model="family.FdName">
+        <input type="text" class="form-control" ng-model="family.FdName" ng-disabled="name">
     </div>
   </div>
   <div class="col-sm-6">
@@ -20,12 +21,12 @@
       <label for="inputDesignation">RelationShip*</label>
       <select id="empdesignation_{{$index}}"
                       name="empdesignation_{{$index}}"
-                      ng-model="empTabCtrl.family.FdRelationshipId"
+                      ng-model="family.FdRelationshipId"
                       class="form-control"
                       ng-options="relationship.value as relationship.name for relationship in relationships"
                       ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
                       data-placeholder="Select Nav Menu"
-                      ng-required="true">
+                      ng-disabled="relationship">
                </select>
     </div>
   </div>
@@ -35,15 +36,15 @@
   <div class="col-sm-6">
     <div class="form-group">
       <label for="inputDepartment">Date Of Birth*</label>
-        <input type="text" class="form-control" ng-model="empTabCtrl.family.FdDateOfBirth">
+        <input type="text" class="form-control" ng-model="family.FdDateOfBirth" ng-disabled="dateofbirth">
     </div>
   </div>
   <div class="col-sm-6">
     <div class="form-group">
       <div class="checkbox">
       <label class="custom-checkbox">      
-      <input type="checkbox" ng-model="empTabCtrl.family.FdDependents" >   
-      <span>Department</span>
+      <input type="checkbox" ng-model="family.FdDependents" ng-disabled="dependent">   
+      <span>Dependent</span>
     </label>
    </div>
     </div>
@@ -52,8 +53,8 @@
 </div>
   </div>
   <div class="modal-footer">
-    <div class="text-center">
-    <button type="button" class="btn btn-primary" ng-click="addFamily()">Save</button>
+    <div class="text-center" ng-if="dateofbirth==false">
+    <button type="button" class="btn btn-primary" ng-click="editFamily()">Save</button>
     <button type="button" class="btn btn-primary" ng-click="$dismiss()">Cancel</button>
   </div>
    </div> 
